--- a/templates/Prenotazioni.html
+++ b/templates/Prenotazioni.html
@@ -45,6 +45,7 @@
       </div>
       <button type="submit" class="btn btn-primary">Prenota</button>
     </form>
+    <p>Posti Prenotati: {{.postiTotaliPrenotati}}</p>
     </div>
     <!-- COLONNA 2 -->
     <div class="col-7">
