Aggiunta la tabella sotto prenotazioni per il calcolo di posti per ogni referente e il totale delle prenotazioni, sia totale che per giorno

--- a/templates/PrenotazioniGiorno.html
+++ b/templates/PrenotazioniGiorno.html
@@ -43,7 +43,29 @@
       </div>
       <button type="submit" class="btn btn-primary">Prenota</button>
     </form>
-    <p>Posti Prenotati: {{.postiTotaliPrenotati}}</p>
+    <br>
+    <table class="table table-bordered inline">
+      <thead>
+        <tr>
+          <th>Nome</th>
+          <th>Prenotazioni</th>
+        </tr>
+      </thead>
+      <tbody>
+      {{range .postiTotaliReferenti}}
+        <tr>
+          <td>{{.Nome}}</td>
+          <td>{{.Posti}}</td>
+        </tr>
+      {{end}}
+      </tbody>
+      <tfoot>
+        <tr>
+          <th>Totale</th>
+          <th>{{.postiTotaliPrenotati}}
+        </tr>
+      </tfoot>
+    </table>
     </div>
     <!-- COLONNA 2 -->
     <div class="col-7">
