Piccoli fix, rimossi tutti gli ID nelle visualizzazioni tabelle

--- a/templates/Attore.html
+++ b/templates/Attore.html
@@ -14,7 +14,7 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th scope="col">ID</th>
+        <!--<th scope="col">ID</th>-->
         <th scope="col">Nome</th>
         <th scope="col">Cognome</th>
         <th scope="col">Email</th>
@@ -22,10 +22,10 @@
     </thead>
     <tbody>
       <tr>
-        <td scope="row">{{.attore.ID}}</td>
-        <td>{{.attore.Nome}}</td>
-        <td>{{.attore.Cognome}}</td>
-        <td>{{.attore.Email}}</td>
+        <!--<td scope="row">{{.attore.ID}}</td>-->
+        <td scope="row">{{.attore.Nome}}</td>
+        <td scope="row">{{.attore.Cognome}}</td>
+        <td scope="row">{{.attore.Email}}</td>
       </tr>
     </tbody>
   </table>
