--- a/templates/Prenotazione.html
+++ b/templates/Prenotazione.html
@@ -19,7 +19,7 @@
       <table class="table table-bordered">
         <thead>
           <tr>
-           <th scope="col">ID</th>
+            <!--<th scope="col">ID</th>-->
             <th scope="col">Nome</th>
             <th scope="col">Posti</th>
             <th scope="col">Data</th>
@@ -28,11 +28,11 @@
         </thead>
        <tbody>
          <tr>
-            <td scope="row">{{.prenotazione.ID}}</td>
-            <td>{{.prenotazione.Nome}}</td>
-            <td>{{.prenotazione.Posti}}</td>
-            <td>{{.prenotazione.Data.Format "02/01/2006"}}</td>
-            <td>{{.prenotazione.Referente}}</td>
+            <!--<td scope="row">{{.prenotazione.ID}}</td>-->
+            <td scope="row">{{.prenotazione.Nome}}</td>
+            <td scope="row">{{.prenotazione.Posti}}</td>
+            <td scope="row">{{.prenotazione.Data.Format "02/01/2006"}}</td>
+            <td scope="row">{{.prenotazione.Referente}}</td>
           </tr>
         </tbody>
       </table>
