--- a/templates/Spettacolo.html
+++ b/templates/Spettacolo.html
@@ -14,7 +14,7 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th scope="col">ID</th>
+        <!--<th scope="col">ID</th>-->
         <th scope="col">Nome</th>
         <th scope="col">Inizio</th>
         <th scope="col">Fine</th>
@@ -23,11 +23,11 @@
     </thead>
     <tbody>
       <tr>
-        <td scope="row">{{.spettacolo.ID}}</td>
-        <td>{{.spettacolo.Nome}}</td>
-        <td>{{.spettacolo.Inizio.Format "2006-01-02"}}</td>
-        <td>{{.spettacolo.Fine.Format "2006-01-02"}}</td>
-        <td>{{.spettacolo.TeatroName}}</td>
+        <!--<td scope="row">{{.spettacolo.ID}}</td>-->
+        <td scope="row">{{.spettacolo.Nome}}</td>
+        <td scope="row">{{.spettacolo.Inizio.Format "2006-01-02"}}</td>
+        <td scope="row">{{.spettacolo.Fine.Format "2006-01-02"}}</td>
+        <td scope="row">{{.spettacolo.TeatroName}}</td>
       </tr>
     </tbody>
   </table>
