--- a/templates/Teatro.html
+++ b/templates/Teatro.html
@@ -14,16 +14,16 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th scope="col">ID</th>
+        <!--<th scope="col">ID</th>-->
         <th scope="col">Nome</th>
         <th scope="col">Posti</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td scope="row">{{.teatro.ID}}</td>
-        <td>{{.teatro.Nome}}</td>
-        <td>{{.teatro.Posti}}</td>
+        <!--<td scope="row">{{.teatro.ID}}</td>-->
+        <td scope="row">{{.teatro.Nome}}</td>
+        <td scope="row">{{.teatro.Posti}}</td>
       </tr>
     </tbody>
   </table>
