Aggiunte pagine Biglietto, controllers Biglietto e test effettuati.

--- a/templates/Teatri.html
+++ b/templates/Teatri.html
@@ -26,9 +26,9 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <!--<th scope="col">ID <a href="/spettacoli/read?orderby=ID desc">&#x2191;</a><a href="/spettacoli/read?orderby=ID asc">&#x2193;</a></th>-->
-        <th scope="col">Nome <a href="/spettacoli/read?orderby=Nome desc">&#x2191;</a><a href="/spettacoli/read?orderby=Nome asc">&#x2193;</a></th>
-        <th scope="col">Posti <a href="/spettacoli/read?orderby=Posti desc">&#x2191;</a><a href="/spettacoli/read?orderby=Posti asc">&#x2193;</a></th>
+        <!--<th scope="col">ID <a href="/teatri/read?orderby=ID desc">&#x2191;</a><a href="/teatri/read?orderby=ID asc">&#x2193;</a></th>-->
+        <th scope="col">Nome<a href="/teatri/read?orderby=Nome desc">&#x2191;</a><a href="/teatri/read?orderby=Nome asc">&#x2193;</a></th>
+        <th scope="col">Posti<a href="/teatri/read?orderby=Posti desc">&#x2191;</a><a href="/teatri/read?orderby=Posti asc">&#x2193;</a></th>
         <th scope="col">Opzioni</th>
       </tr>
     </thead>
