--- a/templates/PrenotazioniGiorno.html
+++ b/templates/PrenotazioniGiorno.html
@@ -43,7 +43,54 @@
       </div>
       <button type="submit" class="btn btn-primary">Prenota</button>
     </form>
-    <br>
+    </div>
+    <!-- COLONNA 2 -->
+    <div class="col-7">
+      <h2>Lista Prenotazioni per <a href="/prenotazioni/read/{{.spettacolo.ID}}">{{.spettacolo.Nome}}</a> del {{.dateQuery}}</h2>
+      <div class="btn-group" role="group" aria-label="Basic outlined example">
+        {{range $date := .date}}
+          <a href="/prenotazioni/read/{{$.spettacolo.ID}}?data={{$date.Format "2006-01-02"}}" class="btn btn-outline-primary" aria-current="page">{{$date.Format "02/01/2006"}}</a>
+        {{end}}
+      </div>
+      <table class="table table-bordered inline">
+        <thead>
+          <tr>
+            <!--<th scope="col">ID <a href="/prenotazioni/read/{{.spettacolo.ID}}?data={{.dateQuery}}&orderby=ID desc">&#x2191;</a><a href="/prenotazioni/read/{{.spettacolo.ID}}?data={{.dateQuery}}&orderby=ID asc">&#x2193;</a></th>-->
+            <th scope="col">Nome <a href="/prenotazioni/read/{{.spettacolo.ID}}?data={{.dateQuery}}&orderby=Nome desc">&#x2191;</a><a href="/prenotazioni/read/{{.spettacolo.ID}}?data={{.dateQuery}}&orderby=Nome asc">&#x2193;</a></th>
+            <th scope="col">Posti <a href="/prenotazioni/read/{{.spettacolo.ID}}?data={{.dateQuery}}&orderby=Posti desc">&#x2191;</a><a href="/prenotazioni/read/{{.spettacolo.ID}}?data={{.dateQuery}}&orderby=Posti asc">&#x2193;</a></th>
+            <th scope="col">Biglietto<a href="/prenotazioni/read/{{.spettacolo.ID}}?data={{.dateQuery}}&orderby=Biglietto desc">&#x2191;</a><a href="/prenotazioni/read/{{.spettacolo.ID}}?data={{.dateQuery}}&orderby=Biglietto asc">&#x2193;</a></th>
+            <th scope="col">Data</th>
+            <th scope="col">Referente <a href="/prenotazioni/read/{{.spettacolo.ID}}?data={{.dateQuery}}&orderby=Referente desc">&#x2191;</a><a href="/prenotazioni/read/{{.spettacolo.ID}}?data={{.dateQuery}}&orderby=Referente asc">&#x2193;</a></th>
+            <th scope="col">Opzioni</th>
+         </tr>
+        </thead>
+       <tbody>
+        {{range .prenotazioni}}
+         <tr>
+            <!--<td scope="row">{{.ID}}</td>-->
+            <td scope="row">{{.Nome}}</td>
+            <td scope="row">{{.Posti}}</td>
+            <td scope="row">{{.BigliettoTipo}}</td>
+            <td scope="row">{{.Data.Format "02/01/2006"}}</td>
+            <td scope="row">{{.Referente}}</td>
+            <td scope="row">
+              <form method="GET" action="/prenotazioni/update/{{.ID}}" style="display: inline-block;">
+                <button type="submit" class="btn btn-primary">Modifica</button>
+              </form>
+              <form method="POST" action="/prenotazioni/delete/{{.ID}}" style="display: inline-block;" onsubmit="return confirm('Sei sicuro di voler eliminare lo spettacolo {{.Nome}}?')" >
+                <input type="hidden" name="_method" value="DELETE">
+                <button type="submit" class="btn btn-primary">Elimina</button>
+              </form>
+            </td>
+          </tr>
+        {{end}}
+        </tbody>
+      </table>
+    </div>
+    <!-- COLONNA 3 -->
+    <div class="col-2">
+    <p>Export to: <a href="/export/csv/prenotazioni/{{.spettacolo.ID}}?data={{.dateQuery}}">CSV</a></p>
+        <!-- Prenotazioni Totali -->
     <table class="table table-bordered inline">
       <thead>
         <tr>
@@ -66,53 +113,34 @@
         </tr>
       </tfoot>
     </table>
-    </div>
-    <!-- COLONNA 2 -->
-    <div class="col-7">
-      <h2>Lista Prenotazioni per <a href="/prenotazioni/read/{{.spettacolo.ID}}">{{.spettacolo.Nome}}</a> del {{.dateQuery}}</h2>
-      <div class="btn-group" role="group" aria-label="Basic outlined example">
-        {{range $date := .date}}
-          <a href="/prenotazioni/read/{{$.spettacolo.ID}}?data={{$date.Format "2006-01-02"}}" class="btn btn-outline-primary" aria-current="page">{{$date.Format "02/01/2006"}}</a>
-        {{end}}
-      </div>
-      <table class="table table-bordered inline">
-        <thead>
-          <tr>
-            <!--<th scope="col">ID <a href="/prenotazioni/read/{{.spettacolo.ID}}?data={{.dateQuery}}&orderby=ID desc">&#x2191;</a><a href="/prenotazioni/read/{{.spettacolo.ID}}?data={{.dateQuery}}&orderby=ID asc">&#x2193;</a></th>-->
-            <th scope="col">Nome <a href="/prenotazioni/read/{{.spettacolo.ID}}?data={{.dateQuery}}&orderby=Nome desc">&#x2191;</a><a href="/prenotazioni/read/{{.spettacolo.ID}}?data={{.dateQuery}}&orderby=Nome asc">&#x2193;</a></th>
-            <th scope="col">Posti <a href="/prenotazioni/read/{{.spettacolo.ID}}?data={{.dateQuery}}&orderby=Posti desc">&#x2191;</a><a href="/prenotazioni/read/{{.spettacolo.ID}}?data={{.dateQuery}}&orderby=Posti asc">&#x2193;</a></th>
-            <th scope="col">Biglietto</th>
-            <th scope="col">Data</th>
-            <th scope="col">Referente <a href="/prenotazioni/read/{{.spettacolo.ID}}?data={{.dateQuery}}&orderby=Referente desc">&#x2191;</a><a href="/prenotazioni/read/{{.spettacolo.ID}}?data={{.dateQuery}}&orderby=Referente asc">&#x2193;</a></th>
-            <th scope="col">Opzioni</th>
-         </tr>
-        </thead>
-       <tbody>
-        {{range .prenotazioni}}
-         <tr>
-            <!--<td scope="row">{{.ID}}</td>-->
-            <td scope="row">{{.Nome}}</td>
-            <td scope="row">{{.Posti}}</td>
-            <td scope="row">test</td>
-            <td scope="row">{{.Data.Format "02/01/2006"}}</td>
-            <td scope="row">{{.Referente}}</td>
-            <td scope="row">
-              <form method="GET" action="/prenotazioni/update/{{.ID}}" style="display: inline-block;">
-                <button type="submit" class="btn btn-primary">Modifica</button>
-              </form>
-              <form method="POST" action="/prenotazioni/delete/{{.ID}}" style="display: inline-block;" onsubmit="return confirm('Sei sicuro di voler eliminare lo spettacolo {{.Nome}}?')" >
-                <input type="hidden" name="_method" value="DELETE">
-                <button type="submit" class="btn btn-primary">Elimina</button>
-              </form>
-            </td>
-          </tr>
-        {{end}}
-        </tbody>
-      </table>
-    </div>
-    <!-- COLONNA 3 -->
-    <div class="col-2">
-    <p>Export to:</p><a href="/export/csv/prenotazioni/{{.spettacolo.ID}}?data={{.dateQuery}}">CSV</a>
+    <!-- Fine Prenotazioni Totali -->
+    <!-- Incasso Totale -->
+    <table class="table table-bordered inline">
+      <thead>
+        <tr>
+          <th>Biglietto</th>
+          <th>Totale</th>
+          <th>Incasso</th>
+        </tr>
+      </thead>
+      <tbody>
+      {{range $tipo, $val := .bigliettiCalcolo}}
+        <tr>
+            <td>{{$tipo}}</td>
+            <td>{{$val.NumBiglietti}}</td>
+            <td>{{$val.CostoTotale}} €</td>
+        </tr>
+      {{end}}
+      </tbody>
+      <tfoot>
+        <tr>
+          <th>Totale</th>
+          <th>{{.totaleBiglietti}}</th>
+          <th>{{.totaleCosti}} €</th>
+        </tr>
+      </tfoot>
+    </table>
+    <!-- Fine Incasso Totale -->
     </div>
   </div>
 </div>
