Prime modifiche per Evasione

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,11 @@
 {{template "header.html"}}
-  <title>Compagnia del Bagatto</title>
+  <title>Evasione Teatrale</title>
 </head>
 <body>
 {{template "navbar.html"}}
+<div class="row font-monospace text-center justify-content-center align-items-center" style="text-align: center;display: grid;">
+    <div class="col"><strong>Evasione Teatrale</strong></div>
+    <div class="col"><img src="/imgs/Solo-Logo-Evasione.png" /></div>
+    <div class="col"><strong>Prenotazioni</strong></div>
+</div>
 {{template "footer.html"}}
