--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Compagnia Del Bagatto</a>
+  <a class="navbar-brand" href="/">
+    <img src="/imgs/Solo-Logo-Evasione.png" width="30" height="30" class="d-inline-block align-center" alt="Logo Evasione">
+    Evasione Teatrale
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -9,9 +12,25 @@
       <li class="nav-item active">
         <a class="nav-link" href="/spettacoli/read">Spettacoli</a>
       </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Utenti
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Maestri</a>
+          <a class="dropdown-item" href="#">Allievi</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Staff</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Evasi</a>
+        </div>
+      </li>
+
       <li class="nav-item">
         <a class="nav-link" href="/attori/read">Attori</a>
       </li>
+      
       <li class="nav-item">
         <a class="nav-link" href="/teatri/read">Teatri</a>
       </li>
