--- a/templates/PrenotazioniGiorno.html
+++ b/templates/PrenotazioniGiorno.html
@@ -25,7 +25,7 @@
         <span class="input-group-text" id="basic-addon1">Biglietto</span>
         <select class="form-select" aria-label="bigliettoID" id="bigliettoID" name="bigliettoID">
           {{range $i := .biglietti}}
-            <option value="{{$biglietti.ID}}">{{.Tipo}} ({{.Costo}}€)</option>
+            <option value="{{$i.ID}}">{{$i.Tipo}} ({{$i.Costo}}€)</option>
           {{end}}
         </select>
       </div>
